# PaperPlot

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml
examples/: colorset_demo.py  draw_grid.py  matplot_subplot_demo.py  presets_palettes_demo.py  quickstart.py  subplot.py
ppplt/: __init__.py  animate.py  colorset.py  draw.py  layout.py  logging.py  misc.py  pipeline.py  presets.py  save.py  style.py
styles/: GB.mplstyle  IEEE.mplstyle
tests/: test_colorset.py  test_presets.py  test_styles.py
