[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "paper-plot"
version = "0.1.0"
description = "Matplotlib styles and utilities for scientific and paper-ready plots (IEEE & GB)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
	{ name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }
keywords = ["matplotlib", "mplstyle", "plotting", "paper", "IEEE", "GB", "publication"]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
	"matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
	"pytest>=7",
]

[project.urls]
Homepage = "https://github.com/yourname/paper-plot"
Issues = "https://github.com/yourname/paper-plot/issues"

[tool.hatch.build.targets.wheel]
packages = ["ppplt"]

# Ensure non-Python assets are included inside the installed wheel under ppplt/
# Without moving files in the repo, we place them into ppplt/ at build time for reliable runtime access.
[tool.hatch.build.targets.wheel.force-include]
"styles" = "ppplt/styles"
"fonts" = "ppplt/fonts"

[tool.hatch.envs.default]
type = "virtual"

[tool.hatch.envs.dev]
dependencies = [
	"pytest>=7",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
